Add index.html from Portfolio

--- a/index.html
+++ b/index.html
@@ -1,7 +1,186 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+<!--
+	Retrospect by TEMPLATED
+	templated.co @templatedco
+	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
+-->
 <html>
-  <body>
-    <h1>Hello World</h1>
-    <p>I'm hosted with GitHub Pages.</p>
-  </body>
+	<head>
+		<title>Welcome to Xinkai's space!</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+	</head>
+	<body class="landing">
+
+		<!-- Header -->
+			<header id="header" class="alt">
+				<h1><a href="index.html">Xinkai Wang</a></h1>
+				<a href="#nav">Menu</a>
+			</header>
+
+		<!-- Nav -->
+			<nav id="nav">
+				<ul class="links">
+					<li><a href="index.html">Home</a></li>
+					<li><a href="generic.html">Generic</a></li>
+					<li><a href="elements.html">Elements</a></li>
+				</ul>
+			</nav>
+
+		<!-- Banner -->
+			<section id="banner">
+				<a href="https://github.com/martin31hao" target="_blank"><i class="icon fa-github"></i></a>
+				<h2>Who is Xinkai?</h2>
+				<br/> 
+				<h2>Software Engineer</h2>
+				<p>Search Infrastructure AT LinkedIn</p>
+				<p>CMU Alumnus, WHU Alumnus, Microsoft Alumnus</p>
+				<p>Distributed Systems, Mobile computing</p>
+				<ul class="actions">
+					<li><a href="https://www.linkedin.com/in/xinkaiwang" target="_blank" class="button big special">More</a></li>
+				</ul>
+			</section>
+
+		<!-- One -->
+			<section id="one" class="wrapper style1">
+				<div class="inner">
+                    <h2>Fun projects I've built</h2>
+					<article class="feature left">
+						<span class="image"><img src="images/cardboard.jpg" alt="" /></span>
+						<div class="content">
+							<h2>VTour -Interactive  Google Street View Hyperlapse</h2>
+							<p>Google Cardboard application, that utilizes <a href="http://elijah.cs.cmu.edu/" target="_blank">Cloudlet</a>, a mobile-edge computing infrastructure, to render realtime, immersive google street view panorama video. We support city mode, which users can stop at each intersection, and choose which way to go next, as well as highway mode, where users travel in almost 110 miles/h to even 220 miles/h in our application.</p> 
+							<p>Check out our <a href="https://www.youtube.com/watch?v=_4UlFiiQENA" target="_blank">demo</a></p>
+							<ul class="actions">
+								<li>
+									<a href="#" class="button alt">More</a>
+								</li>
+							</ul>
+						</div>
+					</article>
+					<article class="feature right">
+						<span class="image"><img src="images/emojin.png" alt="" /></span>
+						<div class="content">
+							<h2>Emoj[IN] - Bring Emojis to your LinkedIn Profile</h2>
+							<p>A hackathon project, that utilizes Google Chrome Extension to simulate putting emojis to user profile in home page, news feed and people search pages, to enable users show more information on their LinkedIn profile, such as whether they are looking for a job, what's their most proficient skills, etc. Users are able to set at most 3 emojis in their personal page.</p>
+							<p>Emoj[IN] was the top final 15 teams at LinkedIn's intern hackathon out of more than 60 teams.</p>
+							<ul class="actions">
+								<li>
+									<a href="#" class="button alt">More</a>
+								</li>
+							</ul>
+						</div>
+					</article>
+				</div>
+			</section>
+
+		<!-- Two -->
+			<!--<section id="two" class="wrapper special">
+				<div class="inner">
+					<header class="major narrow">
+						<h2>Backend experiences</h2>
+						<h3>Cloud file system</h3>
+                        <h3>Text-based search engine</h3>
+                        <h3>Twitter analytics service</h3>
+                        <h3>FSCK on EXT-2 file system</h3>
+                        <h3>C library for RPC</h3>
+                        <h3>File-caching Proxy for distributed systems</h3>
+					</header>
+					<div class="image-grid">
+						<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+						<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
+						<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
+						<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
+						<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
+						<a href="#" class="image"><img src="images/pic08.jpg" alt="" /></a>
+						<a href="#" class="image"><img src="images/pic09.jpg" alt="" /></a>
+						<a href="#" class="image"><img src="images/pic10.jpg" alt="" /></a>
+					</div>
+					<ul class="actions">
+						<li><a href="#" class="button big alt">Tempus Aliquam</a></li>
+					</ul>
+				</div>
+			</section>-->
+
+		<!-- Three -->
+			<section id="three" class="wrapper style3 special">
+				<div class="inner">
+					<header class="major narrow	">
+						<h2>Backend experiences</h2>
+                        <h3>Cloud file system</h3>
+                        <h3>Text-based search engine</h3>
+                        <h3>Twitter analytics service</h3>
+                        <h3>FSCK on EXT-2 file system</h3>
+                        <h3>C library for RPC</h3>
+                        <h3>File-caching Proxy for distributed systems</h3>
+					</header>
+					<ul class="actions">
+						<li><a href="#" class="button big alt">More</a></li>
+					</ul>
+				</div>
+			</section>
+
+		<!-- Four -->
+			<section id="four" class="wrapper style2 special">
+				<div class="inner">
+					<header class="major narrow">
+						<h2>Get in touch</h2>
+                        <p>If you are in the bay area as well, i would be glad to buy you a cup of coffee to talk stuff face to face. :-)</p>
+					</header>
+					<form action="mailto:martin31hao@gmail.com" method="POST">
+						<div class="container 75%">
+							<div class="row uniform 50%">
+								<div class="6u 12u$(xsmall)">
+									<input name="name" placeholder="Name" type="text" />
+								</div>
+								<div class="6u$ 12u$(xsmall)">
+									<input name="email" placeholder="Email" type="email" />
+								</div>
+								<div class="12u$">
+									<textarea name="message" placeholder="Message" rows="4"></textarea>
+								</div>
+							</div>
+						</div>
+						<ul class="actions">
+							<li><input type="submit" class="special" value="Submit" /></li>
+							<li><input type="reset" class="alt" value="Reset" /></li>
+						</ul>
+					</form>
+				</div>
+			</section>
+
+		<!-- Footer -->
+			<footer id="footer">
+				<div class="inner">
+					<ul class="icons">
+						<li><a href="https://www.linkedin.com/in/xinkaiwang" target="_blank" class="icon fa-linkedin">
+							<span class="label">LinkedIn</span>
+						</a></li>
+						<li><a href="https://github.com/martin31hao" target="_blank" class="icon fa-github">
+							<span class="label">Github</span>
+						</a></li>
+						<li><a href="https://www.facebook.com/profile.php?id=100001512277807" target="_blank" class="icon fa-facebook">
+							<span class="label">Facebook</span>
+						</a></li>
+					</ul>
+					<ul class="copyright">
+						<li>&copy;2015 xinkaiw</li>
+						<li>Images: <a href="http://unsplash.com">Unsplash</a>.</li>
+						<li>Design: <a href="http://templated.co">TEMPLATED</a>.</li>
+					</ul>
+				</div>
+			</footer>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/skel.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+			<script src="assets/js/main.js"></script>
+
+	</body>
 </html>
