Add year-to-end goals

--- a/generic.html
+++ b/generic.html
@@ -36,8 +36,11 @@
 				<div class="container">
 
 					<header class="major special">
-						<h2>Under Development</h2>
-						<p>...</p>
+						<h2>Year-to-End goals</h2>
+						<p>Learn Pistol at school</p>
+						<p>Summer: Master wind surfing</p>
+						<p>Winter: Snowboarding on Black</p>
+						<p>Go back to Gym</p>
 					</header>
 
 					<a href="#" class="image fit"><img src="images/pic11.jpg" alt="" /></a>
