Add place to visit 2017

--- a/generic.html
+++ b/generic.html
@@ -44,9 +44,9 @@
 					<p>Summer: Master wind surfing</p>
 					<p>Winter: Snowboarding on Black</p>
 					<p>Go back to Gym</p>
-					<p></p>
-					<p></p>
-					<p></p>
+					<p>Grand Canyon National Park</p>
+					<p>Lake Tahoe water sports for summer</p>
+					<p>New Orleans</p>
 
 				</div>
 			</section>
