--- a/generic.html
+++ b/generic.html
@@ -37,6 +37,9 @@
 
 					<header class="major special">
 						<h2>Year-to-End goals</h2>
+						<h3>Done</h3>
+						<p>Point Reyes light house</p>
+						<p>Muir Wood National Monument</p>
 					</header>
 
 					<a href="#" class="image fit"><img src="images/pic11.jpg" alt="" /></a>
